fixed an issue with the top bar on mobile

--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ footer {
 	/* adjust height and padding of top bar */
 	.topBar {
 		padding: 50px;
-		font-size: 30px;
+		font-size: 40px;
 	}
 	.topBar a {
 		padding-left: 10px;
